--- a/eShopKart/Login.storyboard
+++ b/eShopKart/Login.storyboard
@@ -1425,12 +1425,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="ikb-WE-jGh">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="600"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="0.0" y="44" width="375" height="623"/>
-                                </variation>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iID-3q-gpn">
                                 <rect key="frame" x="234" y="53" width="133" height="186"/>
                                 <constraints>
@@ -1441,8 +1435,7 @@
                                         <exclude reference="oV3-U9-lNO"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="121" y="84" width="133" height="155"/>
+                                <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="oV3-U9-lNO"/>
                                     </mask>
@@ -1502,7 +1495,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="65"/>
                                 <state key="normal" image="sign_in_with_email"/>
                                 <connections>
-                                    <segue destination="FEi-YT-ZCg" kind="show" id="NKz-wh-1fB"/>
+                                    <segue destination="FEi-YT-ZCg" kind="push" id="nXJ-6z-Odh"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shoping is imagination" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oki-ch-bNu">
@@ -1520,6 +1513,9 @@
                                     <action selector="twitterLogin" destination="aVW-UC-KfU" eventType="touchUpInside" id="7jD-ll-cIT"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="ikb-WE-jGh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="600"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -1621,7 +1617,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Kd-1F-W33" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1476.75" y="127.125"/>
+            <point key="canvasLocation" x="1470.75" y="-17.625"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vuV-zQ-d2e">
